# ThinkControl

./: CMakeLists.txt  COPYING  README  README.md  ThinkControl.pro  icons.qrc
h/: devices.h  dialogs.h  governors.h  mainwindow.h  settings.h
src/: devices.cpp  dialogs.cpp  governors.cpp  main.cpp  mainwindow.cpp  sensors.cpp  settings.cpp
ui/: fanpreset.ui  mainwindow.ui  profileline.ui  settings.ui  touchpad.ui  trackpoint.ui
